[FIX] list items template and player overflow

--- a/frontend/src/app/components/player/player.component.css
+++ b/frontend/src/app/components/player/player.component.css
@@ -7,6 +7,7 @@
   margin-right: 1%;
  margin-top: 95px;
 }
+
 #title{
   font-size: 18px;
 }
@@ -46,7 +47,7 @@
 }
 #backoo {
 
-  height: calc(90vh - 90px);
+  height: calc(90vh - 175px);
   width: 100%;
   overflow: auto;
   overflow-x: hidden;
@@ -62,11 +63,6 @@
   height: 1px;
   background-color: #D6D6D4;
 }
-
-
-
-
-
 
 @media(max-width:990px){
   #backoo {
