--- a/frontend/src/app/components/video-player/video-player.component.css
+++ b/frontend/src/app/components/video-player/video-player.component.css
@@ -1,4 +1,4 @@
-#submundo {
+#submundo,.plyr, .plyr--full-ui , .plyr--html5 {
   position: relative;
   height: 70%;
   width: 100%;
